@@ -272,3 +272,6 @@ THANKS
 
   To Jeffrey Hutzelman for adding the framework for ACL method support and
   implementing the file, princ, deny, and gput schemes.
+
+  To Timothy G. Abbott for suggesting additional restrictions on the names
+  of files read when processing an include of a directory.
